# g1_crouch

./: readme.md
arm/lcm_types/: __init__.py  arm_action_lcmt.py  body_control_data_lcmt.py
arm/teleop/: ik_trajectory_demo.py
arm/teleop/robot_control/: robot_arm.py  robot_arm_ik.py
deploy/: config.yaml
deploy/include/FSM/: BaseState.h  CtrlFSM.h  FSMState.h  State_FixStand.h  State_Passive.h  State_RLBase.h
deploy/include/isaaclab/assets/articulation/: articulation.h
deploy/include/isaaclab/envs/: manager_based_rl_env.h
deploy/include/isaaclab/envs/mdp/actions/: joint_actions.h
deploy/include/isaaclab/envs/mdp/observations/: observations.h
deploy/include/isaaclab/manager/: action_manager.h  manager_term_cfg.h  observation_manager.h
deploy/robot/g1/: CMakeLists.txt  main.cpp
deploy/robot/g1/config/policy/: config.yaml
deploy/robot/g1/config/policy/velocity/height_flat_v0/exported/: policy.onnx
deploy/robot/g1/config/policy/velocity/height_flat_v0/params/: deploy.yaml  deploy.yaml.bak_20260520_104211
deploy/robot/g1/include/: G1_HeightArticulation.h  RightArmIKLCMBridge.h  Types.h
deploy/robot/g1/include/lcm_types/: arm_action_lcmt.hpp  body_control_data_lcmt.hpp
deploy/robot/g1/scripts/: build.sh  prepare_policy.sh  run_ctrl.sh
deploy/robot/g1/src/: RightArmIKLCMBridge.cpp  State_RLBase.cpp
